<resources>
    <string name="app_name">My Application</string>


    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>

    <string name="addsubject"> Add Subject</string>
    <string name="subject">Subject</string>
    <string name="subjectname">Name</string>
    <string name="subject_day">Day</string>
    <string name="subject_time">Choose time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End time</string>
    <string name="save">Save</string>
    <string name="add_an_assignment">Add Assignment</string>
    <string name="assignment">Assignment</string>
    <string name="due_date">Due date</string>
    <string name="your_total_assignments">Your Pending Assignments</string>
    <string name="choose">Choose</string>
    <string name="your_total_exams">Your Upcoming Exams</string>
    <string name="add_exam">Add Exam</string>
    <string name="exam">Exam</string>
    <string name="assignment_hint">Click \"+\" button to add\n a new assignment.</string>
    <string name="exam_hint">Click \"+\" button to add\n a new exam.</string>
    <string name="delete_subject">Delete Subject</string>
    <string name="course_number">Course number</string>
    <string name="delete">Delete</string>
    <string name="delete_all_subjects">Delete All Subjects</string>


    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>

    </string-array>

    <string-array name="course_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>


    </string-array>

</resources>